syntax = "proto3";

package PythonCoreLib.Models;

message TaskModel{
	string taskId=1;
	bytes TaskData = 2;
	bytes TaslResult = 3;
	string TaskType = 4;
}